# zkvm-from-scratch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  crates.js  help.html  justfile  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: zkvm_benchmarks.rs
docs/: plan.md  timeline.md
docs/phase-0/: dev-environment.md  proving-system-selection.md  quick-setup.md  risc-v-isa-subset.md  setup-summary.md  using-multiple-proving-systems.md  zkvm-survey-report.md
search.desc/zkvm/: zkvm-desc-0-.js
search.desc/zkvm_from_scratch/: zkvm_from_scratch-desc-0-.js
src/: lib.rs
src/crypto/: hash.rs  merkle.rs  mod.rs
src/utils/: encoding.rs  mod.rs
src/vm/: execution.rs  memory.rs  mod.rs  opcodes.rs
src/zkp/: constraints.rs  mod.rs  prover.rs  stark.rs  verifier.rs
src/zkvm/: main.rs.html
src/zkvm_from_scratch/: lib.rs.html
src/zkvm_from_scratch/crypto/: hash.rs.html  merkle.rs.html  mod.rs.html
src/zkvm_from_scratch/utils/: encoding.rs.html  mod.rs.html
src/zkvm_from_scratch/vm/: execution.rs.html  memory.rs.html  mod.rs.html  opcodes.rs.html
src/zkvm_from_scratch/zkp/: constraints.rs.html  mod.rs.html  prover.rs.html  stark.rs.html  verifier.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/std/: primitive.array.js
zkvm/: all.html  fn.demo_basic_vm.html  fn.demo_zero_knowledge_proof.html  fn.main.html  index.html  sidebar-items.js
zkvm_from_scratch/: all.html  index.html  sidebar-items.js
zkvm_from_scratch/crypto/: index.html  sidebar-items.js
zkvm_from_scratch/crypto/hash/: fn.hash_bytes.html  fn.hash_pair.html  fn.hash_u32.html  index.html  sidebar-items.js  struct.SimpleHash.html  trait.HashFunction.html  type.HashValue.html
zkvm_from_scratch/crypto/merkle/: index.html  sidebar-items.js  struct.MerkleProof.html  struct.MerkleTree.html
zkvm_from_scratch/utils/: index.html
zkvm_from_scratch/utils/encoding/: fn.bytes_to_u32_le.html  fn.decode_hex.html  fn.encode_hex.html  fn.u32_to_bytes_le.html  index.html  sidebar-items.js
zkvm_from_scratch/vm/: index.html  sidebar-items.js
zkvm_from_scratch/vm/execution/: index.html  sidebar-items.js  struct.ExecutionStep.html  struct.VmState.html
zkvm_from_scratch/vm/memory/: index.html  struct.Memory.html
zkvm_from_scratch/vm/opcodes/: enum.Opcode.html  fn.decode_instruction.html  index.html  sidebar-items.js  struct.Instruction.html
zkvm_from_scratch/zkp/: index.html  sidebar-items.js
zkvm_from_scratch/zkp/constraints/: enum.Constraint.html  enum.Expression.html  index.html  sidebar-items.js  (+1 more)
(+27 files in other folders)
