[package]
name = "zkvm-from-scratch"
version = "0.1.0"
edition = "2021"
authors = ["Nullifier Labs <nullifier-labs@proton.me>"]
description = "A zero-knowledge virtual machine implementation from scratch"
repository = "https://github.com/nullifier-labs/zkvm-from-scratch"
license = "MIT OR Apache-2.0"
keywords = ["zkvm", "zero-knowledge", "virtual-machine", "cryptography"]
categories = ["cryptography", "development-tools"]

[lib]
name = "zkvm_from_scratch"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zkvm"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# Future cryptographic dependencies:
# ark-ff = "0.4"
# ark-ec = "0.4" 
# ark-std = "0.4"
# ark-serialize = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
criterion = "0.5"

[features]
# Enable the standard library by default
default = ["std"]
# Feature flags for different proof systems
stark = []
snark = []
bulletproofs = []
# Development features
std = []
# WebAssembly bindings (optional)
wasm-bindings = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

# Optimize for size when building for WebAssembly
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "zkvm_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]